# tree-sitter-soluna

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-soluna.pc.in
bindings/c/tree_sitter/: tree-sitter-soluna.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_soluna/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSolunaTests/: TreeSitterSolunaTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
